--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -1,4 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read abouts fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
   x_pos: 1.5
