--- a/test/fixtures/cities.yml
+++ b/test/fixtures/cities.yml
@@ -1,7 +1,8 @@
 # Read abouts fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  name: Haifa
 
 two:
-  name: MyString
+  name: Netanya
+
