--- a/test/fixtures/payments.yml
+++ b/test/fixtures/payments.yml
@@ -1,25 +1,15 @@
 # Read abouts fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  x_pos: 1.5
-  y_pos: 1.5
-  street: 
-  area: 
-  city: 
-  creditor: 
-  rate: 
-  user: 
+  area: one
+  rate: one
+  user: two
   start_time: 2013-06-15 17:45:24
-  end_time: 2013-06-15 17:45:24
+  end_time: 2013-06-15 18:45:24
 
 two:
-  x_pos: 1.5
-  y_pos: 1.5
-  street: 
-  area: 
-  city: 
-  creditor: 
-  rate: 
-  user: 
+  area: one
+  rate: two
+  user: two
   start_time: 2013-06-15 17:45:24
-  end_time: 2013-06-15 17:45:24
+  end_time: 2013-06-15 18:45:24
