--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,7 +7,7 @@
 one:
   firstname: ofer
   lastname: kruzel
-  email: okruzel@gmail.com
+  email: ofer.k@downloadius.com
   encrypted_password: qwerasdf
   role: owner
   terms_of_service: true
@@ -17,16 +17,4 @@ one:
   remember_created_at: 2013-06-15 17:45:24
   authentication_token: cD3qXswxkiSxxFuiDuzi
   bank_account: one
-
-two:
-  firstname: lior
-  lastname: Asulin
-  email: alior101@gmail.com
-  encrypted_password: qwerasdf
-  role: user
-  terms_of_service: true
-  invitation_sent_at: 2013-06-15 17:45:24
-  invitation_accepted_at: 2013-06-15 17:45:24
-  confirmed_at: 2013-06-15 17:45:24
-  remember_created_at: 2013-06-15 17:45:24
 
