--- a/config/database.yml
+++ b/config/database.yml
@@ -35,8 +35,8 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: ozpark_pro
+  database: ozpark
   pool: 5
-  username: ozpark_pro
-  password: Wrz5UqA4UxpEEBp2
+  username: root
+  password: ozparkvision
   host: localhost
