--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,7 +8,7 @@ one:
   firstname: ofer
   lastname: kruzel
   email: ofer.k@downloadius.com
-  encrypted_password: qwerasdf
+  encrypted_password: $2a$10$CqbgSZAY.0dLEHhwm8FKuO5oEPgxhEgXhJ9r8rqDhJllLitkNcHxG
   role: owner
   terms_of_service: true
   invitation_sent_at: 2013-06-15 17:45:24
@@ -18,3 +18,16 @@ one:
   authentication_token: cD3qXswxkiSxxFuiDuzi
   bank_account: one
 
+two:
+  firstname: ofer
+  lastname: kruzel
+  email: okruzel@gmail.com
+  encrypted_password: $2a$10$CqbgSZAY.0dLEHhwm8FKuO5oEPgxhEgXhJ9r8rqDhJllLitkNcHxG
+  role: user
+  terms_of_service: true
+  invitation_sent_at: 2013-06-15 17:45:24
+  invitation_accepted_at: 2013-06-15 17:45:24
+  confirmed_at: 2013-06-15 17:45:24
+  remember_created_at: 2013-06-15 17:45:24
+  authentication_token: cD3qXswxkiSxxFuiDuzi
+  bank_account: one
